angular-client/src/app/components/match-making/lobby-panel/lobby-panel.component.css
.invite-panel {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
  background: var(--dark);
  border-radius: 10px;
  opacity: 0.3;
  transition: opacity 0.3s;
}

.invite-panel:hover {
  opacity: 1;
}

.active-panel {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  background: var(--dark);
  border-radius: 10px;
  position: relative;
  padding: 20px 0;
  border-bottom: 8px solid transparent;
  animation: slideInBorder 1s forwards;
}

.crown-container {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.party-leader {
  width: 60px;
  height: auto;
  vertical-align: middle;
  cursor: pointer;
}

.member-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 1.5em;
  flex-grow: 1;
  justify-content: center;
}

.member-info img {
  width: calc(10vw);
  height: calc(10vw);
  max-width: 100px;
  max-height: 100px;
  border-radius: 50%;
}

.member-controls {
  display: flex;
  align-items: center;
  justify-content: center; /* Center the icons horizontally */
}

.member-controls .material-icons-outlined {
  margin: 0 5px; /* 10px margin on the left and right of each icon */
}

.empty-icon {
  width: calc(10vw);
  height: calc(10vw);
  max-width: 100px;
  max-height: 100px;
  border-radius: 50%;

  border: 2px solid var(--purple);
  margin-bottom: 10px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.empty-icon:hover {
  transform: scale(1.1);
  color: #9c27b0;
}

.active-panel .member-info,
.active-panel .member-controls,
.active-panel .party-leader {
  animation: pulseData 1s ease-out;
}

.active-panel::before {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 8px;
  background-color: var(--purple);
  transform: scaleX(0);
  animation: expandBorder 0.5s ease-out forwards;
}

@keyframes pulseData {
  0%,
  100% {
    transform: scale(1);
  }
  25% {
    transform: scale(1.1);
  }
  50% {
    transform: scale(0.9);
  }
  75% {
    transform: scale(1.05);
  }
}

@keyframes slideInBorder {
  from {
    border-bottom-color: transparent;
  }
  to {
    border-bottom-color: var(--purple);
  }
}

@keyframes expandBorder {
  to {
    transform: scaleX(1);
  }
}

